test/data/syntax-errors/no-semicolon.gs
it x = "f"
it y = "hey"
